# gedca

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOIEMENT.md  README.md  docker-compose.yml  render.yaml  wrangler.jsonc
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_socle.py  002_complements_prd01.py  003_stockage_archivage.py  004_unicite_libelles_archivage.py  005_gec_base.py  006_gec_validation.py  007_redirection_et_alertes.py  008_reset_mdp.py
backend/app/: __init__.py  config.py  db.py  main.py  worker.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  agents.py  archivage.py  audit_log.py  auth.py  correspondants.py  courriers.py  departements.py  documents.py  parametres_smtp.py  redirections.py  referentiels.py  statistiques.py  structure.py
backend/app/models/: __init__.py  agent.py  archivage.py  audit.py  correspondant.py  courrier.py  document.py  redirection.py  referentiel.py  reset_mdp.py  tenant.py
backend/app/schemas/: __init__.py  agent.py  archivage.py  audit.py  auth.py  correspondant.py  courrier.py  departement.py  document.py  parametres_smtp.py  redirection.py  referentiel.py  reset_mdp.py  statistiques.py  structure.py
backend/app/services/: __init__.py  archivage.py  audit.py  crypto.py  echeances.py  extraction.py  jwt.py  notifications.py  numerotation_courrier.py  password.py  redirection.py  reset_mdp.py  storage.py
backend/app/tasks/: __init__.py  alertes_retard.py  extraction_doc.py
backend/scripts/: check_courriers.py  check_db.py  reset_mdp.py  seed_dev.py  test_password.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_departements.py  test_documents.py  test_health.py  test_isolation_tenant.py  test_referentiels.py  test_services.py  test_storage.py
bdsoftged/: Boite.FIC  ChambresCourdAppel.FIC  Departement.FIC  DossiersClasseurs.FIC  LocalSalle.FIC  Rayon.FIC  Site.FIC  SousDossiers.FIC  actions.FIC  agents.FIC  agents.mmo  categories.FIC  copiescourriers.FIC  correspondants.FIC  courriers.FIC  cryptage.FIC  demandevalidation.FIC  documents senlex.FIC  documents.FIC  etatavancement.FIC  historiques.FIC  notes.FIC  paramail_.FIC  redirection.FIC  statutcourrier.FIC  structur.FIC  structur.mmo  thematique.FIC  type.FIC  typeexpediteur.FIC
docs/: dumpbdsoftged.txt  ecrans.md  reconciliation-bdsoftged.md  schema.md
docs/prd/: _template.md  prd-00-vision-gedca.md  prd-01-socle-auth-rbac.md  prd-02-stockage-documents.md  prd-03-pipeline-ingestion.md  prd-05-archivage-physique.md  prd-06a-gec-base.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: _redirects
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: agents.ts  archivage.ts  audit.ts  auth.ts  client.ts  correspondants.ts  courriers.ts  departements.ts  documents.ts  parametresSmtp.ts  redirections.ts  referentiels.ts  statistiques.ts  structure.ts  types.ts
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx  useAuth.ts
frontend/src/components/: DetailEmplacement.tsx  DropZone.tsx  Header.tsx  Layout.tsx  ModalEditDocument.tsx  ModalTraiter.tsx  SelecteurEmplacement.tsx  Sidebar.tsx  Visionneuse.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  PageHeader.tsx  Select.tsx  StatsCard.tsx
frontend/src/lib/: echeance.test.ts  echeance.ts  utils.ts
frontend/src/pages/: Accueil.tsx  Agents.tsx  Archivage.tsx  AuditLog.tsx  CourrierNouveau.tsx  Courriers.tsx  Departements.tsx  DocumentNouveau.tsx  Documents.tsx  DocumentsImporter.tsx  Login.tsx  ParametresMail.tsx  Profil.tsx  Redirection.tsx  Referentiels.tsx  ResetMdp.tsx  Statistiques.tsx  Structure.tsx
