[project]
name = "gedca-backend"
version = "0.1.0"
description = "GEDCA — backend FastAPI + worker Celery"
requires-python = ">=3.12"
dependencies = [
  # Web framework
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  # Database
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pgvector>=0.3.6",
  # Sécurité
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3",
  "cryptography>=43.0",
  "email-validator>=2.2",  # requis par pydantic EmailStr
  # Worker
  "celery[redis]>=5.4",
  "redis>=5.2",
  # Ingestion
  "watchdog>=6.0",
  "ocrmypdf>=16.6",
  "pytesseract>=0.3.13",
  "pillow>=11.0",
  # IA
  "anthropic>=0.40",
  "voyageai>=0.3",
  "httpx>=0.27",
  # IMAP
  "imapclient>=3.0",
  # Mail
  "aiosmtplib>=3.0",
  "jinja2>=3.1",
  # Logs
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "httpx>=0.27",
  "ruff>=0.8",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
